--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
+  "name": "backend03",
+  "version": "3.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
